# MEMENTO

./: LICENSE  README.md  Readme-AR.md  Readme-CH.md  Readme-EN.md  index.html  package-lock.json  package.json  vite.config.ts
public/: manifest.json
scripts/: download-xray.ps1  download-xray.sh
src/: App.tsx  i18n.ts  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BrokersModal.tsx  ConfigsTab.tsx  ConnectionManager.tsx  ConnectionTab.tsx  ContactTab.tsx  DonateTab.tsx  EditorTab.tsx  ErrorBoundary.tsx  ExportTab.tsx  ImportTab.tsx  KeyboardShortcuts.tsx  PingerTab.tsx  ScannerTab.tsx  SectionHeader.tsx  Sidebar.tsx  SubscriptionGroups.tsx  ThemeProvider.tsx  TitleBar.tsx  ToastProvider.tsx
src/utils/: connectionActions.ts  editor.ts  fastPing.ts  notification.ts  ping.ts  subscription.ts  tauriBridge.ts  v2rayConfig.ts
