[package]
name = "memento"
version = "2.0.0"
description = "V2Ray Config Editor by Epodonios"
authors = ["Epodonios"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "memento_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tokio = { version = "1", features = ["net", "time", "sync", "rt"] }

# Windows-only: system proxy via registry
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
